<resources>
    <string name="app_name">NoteEditor</string>
    <string name="mail">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="registration">Registration</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="complete">Complete</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="friends">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_s_empty_here">It\'s empty here =(</string>
    <string name="find">Find</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="adding_members">Adding members</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="_0">0</string>
    <string name="link">Link</string>
    <string name="message">Message</string>
    <string name="you">You:</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="d">d</string>
    <string name="date">Date</string>
    <string name="action">action</string>
    <string name="type">Type</string>
    <string name="notes_editor">NOTES EDITOR</string>
</resources>
