<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/firstGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/icon_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/icon_friends"
            android:title="@string/friends" />
    </group>

    <group
        android:id="@+id/secondGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settigs"
            android:icon="@drawable/icons_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/icon_exit"
            android:title="@string/sign_out" />
    </group>

</menu>
